# ecolheita

./: .gitignore  Dockerfile  README.md  docker-compose.yml  environment.example  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  tox.ini
ecolheita/: manage.py  package.json  webpack.config.js
ecolheita/ecolheita/: asgi.py  urls.py  wsgi.py
ecolheita_mobile/: '  .gitignore  App.js  app.json  babel.config.js  package-lock.json  package.json  webpack.config.js
ecolheita_mobile/__tests__/: App.test.js
ecolheita_mobile/__tests__/__snapshots__/: App.test.js.snap
ecolheita_mobile/src/: constants.js  store.js
ecolheita_mobile/src/components/: FavoritesView.js  HomeView.js  HomeView.jsx  MiscView.js  Profile.js  Vendor.js  searchAndFilter.js
ecolheita_mobile/src/containers/: FavoritesView.js  GlobalFilterView.js  HomeView.js  MapView.js  MiscView.js  OfferDetailView.js  OrdersView.js  README.md  Vendor.js
ecolheita_mobile/src/features/user/: userSlice.js
ecolheita_server/: datadump.json  manage.py  package-lock.json  package.json
ecolheita_server/accounts/: admin.py  models.py
ecolheita_server/accounts/migrations/: 0001_initial.py  0002_auto_20200501_1429.py
ecolheita_server/core/: graphql_schema.py  types.py
ecolheita_server/ecolheita/: asgi.py  settings.py  urls.py  wsgi.py
ecolheita_server/orders/: graphql_schema.py  models.py  types.py
ecolheita_server/orders/migrations/: 0001_initial.py  0002_auto_20200501_1445.py
ecolheita_server/templates/: base.html
ecolheita_server/vendors/: admin.py  graphql_schema.py  models.py  types.py
(+4 files in other folders)
