[tool.poetry]
name = "ecolheita"
version = "0.1.0"
description = ""
authors = ["Kees van Ekeren <kg.v.ekeren@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
graphene-django = "^2.9.0"
graphene = "^2.1.8"
Django = "^3.0.5"
django-cors-headers = "^3.2.1"
python-dotenv = "^0.12.0"
psycopg2-binary = "^2.8.4"
pendulum = "^2.1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
django-extensions = "^2.2.9"
isort = "^4.3.21"
black = "^19.10b0"
flake8 = "^3.7.9"
pytest-django = "^3.9.0"
pytest-cov = "^2.8.1"
ipdb = "^0.13.2"

[tool.black]
line_length = 88

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip_glob = "**/migrations/*,node_modules"

[tool.coverage.run]
source = "krankaoke_backend"
branch = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

